# blame

./: README.md  README1.md  setup.cfg
src/blame/: __init__.py  blame.py
