[metadata]
name = blame
version = 0.0.1
author = Remo Pas
author_email = remo.pas22@gmail.com
description = Reactive programming primitives in 100 lines of Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remopas/blame
project_urls = 
    Bug Tracker = https://github.com/remopas/blame/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
